# cppp

./: .clang-format  CMakeLists.txt  Makefile  README.md  shell.nix
doc/: REFERENCES.md
src/: cppp.c
src/include/: buffer_size.h  cli_parser.c  cli_parser.h  copy.c  copy.h  copy_file.h  error_codes.h  file_info.c  file_info.h  init_process.c  init_process.h  insert.c  insert.h  main.h  merge.c  merge.h  print_warns.c  print_warns.h  progress_bar.c  progress_bar.h  replace.c  replace.h  select_and_merge.c  select_and_merge.h  sha256.c  sha256.h  split.c  split.h
